wallabag/wallabag-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: default
spec:
  selector:
    app: wallabag
  ports:
  - name: web
    port: 80
    targetPort: 80
