wallabag/wallabag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: default
spec:
  rules:
  - host: wallabag.lan
    http:
      paths:
      - backend:
          service:
            name: wallabag
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
